Work-around GNOME bug misidentifying HTML content

Correct application/x-extension-html to text/html

Fixes: QTBUG-97392
Fixes: QTBUG-106688
Pick-to: 6.4 6.3 5.15
Change-Id: I0d65c6950c5ba1504586cf564268463c5d4cd483
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>